html: handle opera and safari not respecting min-width

--- a/antismash/outputs/html/templates/overview.html
+++ b/antismash/outputs/html/templates/overview.html
@@ -23,7 +23,7 @@
       <span id="region-type">Select genomic region:</span>
       <div id="regionbuttons">
         <div class="arrow-left" id="prev-region"></div>
-        <div class="regbutton"><a href="#">Overview</a></div>
+        <div class="regbutton" style="min-width: inherit;"><a href="#">Overview</a></div>
         <div style="display: flex; flex-wrap: wrap">
         {% for record in records %}
           {% for region in record.regions %}
