--- a/antismash/outputs/html/css/style.less
+++ b/antismash/outputs/html/css/style.less
@@ -60,7 +60,7 @@ dd {
 }
 
 .bold {
-    font-weight: bold;
+    font-weight: 600;
 }
 
 .white {
@@ -176,7 +176,7 @@ nav {
     a {
         color: white;
         font-size: 120%;
-        font-weight: bold;
+        .bold;
         &:hover { text-decoration: none; }
     }
 }
@@ -246,9 +246,12 @@ nav {
         color: white;
         margin: 0.1em 0 0.4em 0.1em;
         padding-left: 0.5em;
+        height: 1.55em;
+        line-height: 1.55em;
+        vertical-align: middle;
     }
     .heading {
-        font-weight: bold;
+        .bold;
         margin-left: 0;
         margin-top: 0;
     }
@@ -257,7 +260,7 @@ nav {
 .no-results {
     text-align: center;
     padding: 1em 0;
-    font-weight: bold;
+    .bold;
     background-image: linear-gradient(to bottom, #e8e8e8 0, #f5f5f5 100%);
     background-repeat: repeat-x;
     border-color: #dcdcdc;
@@ -366,27 +369,27 @@ nav {
 }
 
 .dha {
-    font-weight: bold;
+    .bold;
     color: mediumseagreen;
 }
 
 .dhb {
-    font-weight: bold;
+    .bold;
     color: mediumorchid;
 }
 
 .cys {
-    font-weight: bold;
+    .bold;
     color: royalblue;
 }
 
 .macrolactam {
-    font-weight: bold;
+    .bold;
     color: red;
 }
 
 .cut {
-    font-weight: bold;
+    .bold;
     color: grey;
 }
 
@@ -430,7 +433,7 @@ nav {
 
 .contig-edge-warning {
     font-size: 75%;
-    font-weight: bold;
+    .bold;
     float: right;
     color: black;
     background-color: orange;
@@ -526,7 +529,7 @@ table {
 }
 
 .svgene-tooltip-bold {
-    font-weight: bold;
+    .bold;
     font-size: 120%;
 }
 
