html: make region button height consistent across browsers

--- a/antismash/outputs/html/css/style.less
+++ b/antismash/outputs/html/css/style.less
@@ -362,6 +362,8 @@ nav {
         min-width: 3em;
         text-align: center;
         vertical-align: middle;
+        line-height: 1.3em;
+        height: 1.3em;
     }
     li.active {
         padding: 0.14em;
