--- a/antismash/outputs/html/css/style.less
+++ b/antismash/outputs/html/css/style.less
@@ -343,7 +343,7 @@ nav {
 
 #regionbuttons {
     display: flex;
-    margin: 0 0 0 0.5em;
+    margin: 0 0.5em 0 0.5em;
     padding: 0;
     min-height: 1.1em;
     a {
