html: make clipboard copy links use a link cursor

--- a/antismash/outputs/html/css/style.less
+++ b/antismash/outputs/html/css/style.less
@@ -37,6 +37,7 @@ a, .clipboard-copy {
     background-color: #eee;
     border-radius: 2px;
     color: black;
+    cursor: pointer;
     &:active {
         color: @antismash-main
     }
