*tides: clean up sidepanel html in cases of no results

--- a/antismash/modules/sactipeptides/templates/sidepanel.html
+++ b/antismash/modules/sactipeptides/templates/sidepanel.html
@@ -1,6 +1,6 @@
-{% if results | length != 0 %}
 <div class="more-details">
   <h3> Prediction details </h3>
+{% if results | length != 0 %}
   <dl class ="prediction-text">
   {% for motifs in results.values() %}
     {%- for motif in motifs -%}
@@ -11,11 +11,7 @@
     {%- endfor -%}
   {% endfor %}
   </dl>
-</div>
-<div>
-  <h3>Database cross-links</h3>
-  <div class="prediction-text">
-    <a href="http://bioinfo.lifl.fr/norine/form2.jsp" target="_new">Look up in NORINE database</a>
-  </div>
-</div>
+{% else %}
+  <div class="prediction-text">No core peptides found.</div>
 {% endif %}
+</div>
