--- a/antismash/modules/thiopeptides/templates/sidepanel.html
+++ b/antismash/modules/thiopeptides/templates/sidepanel.html
@@ -1,7 +1,8 @@
 <div class="more-details">
   <h3> Prediction details </h3>
+  {% if cluster.motifs %}
   <dl class ="prediction-text">
-  {% for motif in cluster.motifs if motif.peptide_class == "thiopeptide" %}
+  {% for motif in cluster.motifs %}
      <dt>{{motif.locus_tag}}</dt>
       <dd>Putative {{motif.peptide_subclass}}</dd>
         <dd>Cleavage pHMM score: {{'%0.2f' | format(motif.score)}}</dd>
@@ -42,10 +43,7 @@
       </dd>
     {%- endfor %}
   </dl>
-</div>
-<div>
-  <h3>Database cross-links</h3>
-  <div class="prediction-text">
-    <a href="http://bioinfo.lifl.fr/norine/form2.jsp" target="_new">Look up in NORINE database</a>
-  </div>
+{% else %}
+  <div class="prediction-text">No core peptides found.</div>
+{% endif %}
 </div>
