--- a/antismash/outputs/html/css/style.less
+++ b/antismash/outputs/html/css/style.less
@@ -40,6 +40,7 @@ a, .clipboard-copy {
     cursor: pointer;
     padding-right: 0.3em;
     padding-left: 0.3em;
+    font-size: 95%;  /* just enough to have background between links in text */
 
     &:active {
         color: @antismash-main
