--- a/antismash/outputs/html/css/fungi.less
+++ b/antismash/outputs/html/css/fungi.less
@@ -1,4 +1,5 @@
-@antismash-main: #997722;
+@antismash-main: #665511;
+@antismash-old: #997722;
 @antismash-gray: #1d1414;
 @antismash-light: #bb9933;
 
