html: lower clusterblast tooltip font size

--- a/antismash/outputs/html/css/style.less
+++ b/antismash/outputs/html/css/style.less
@@ -719,7 +719,8 @@ table {
     position: absolute;
 }
 .clusterblast-tooltip {
-    .tooltip
+    .tooltip;
+    font-size: 90%;
 }
 .clusterblast-acc {
   fill: @antismash-main;
