html: make expander icons more obvious

--- a/antismash/outputs/html/css/style.less
+++ b/antismash/outputs/html/css/style.less
@@ -490,7 +490,7 @@ table {
 
     display: none;
     border-radius: 0.2em;
-    width: 35em;
+    width: 35vw;
     padding: 0.5em;
 
     /* start halfway down and keep to the left of the container */
@@ -770,11 +770,12 @@ table {
 
 .collapser-decorator {
     content: '';
-    background-size: 1em 1em;
-    height: 1em;
-    width: 1em;
+    background-size: 1.1em 1.1em;
+    height: 1.1em;
+    width: 1.1em;
     background-repeat: no-repeat;
     display: inline-block;
+    margin-left: 0.5em;
 }
 
 .collapser:before {
