lanthipeptides: add help tooltips

--- a/antismash/modules/lanthipeptides/templates/details.html
+++ b/antismash/modules/lanthipeptides/templates/details.html
@@ -1,5 +1,8 @@
 <div class="details">
-  <h3>Detailed annotation</h3>
+    <div class="heading">
+      <span>Lanthipeptide predictions</span>
+      {{help_tooltip(tooltip, "lanthi-body")}}
+    </div>
   {% if not results %}
     <div class="details-text">
       Lanthipeptides - No core peptides found.
