--- a/antismash/modules/lassopeptides/templates/details.html
+++ b/antismash/modules/lassopeptides/templates/details.html
@@ -1,5 +1,8 @@
 <div class="details">
-  <h3>Detailed annotation</h3>
+    <div class="heading">
+      <span>Lasso peptide predictions</span>
+      {{help_tooltip(tooltip, "lasso-body")}}
+    </div>
   {% if not results %}
     <div class="details-text">
       Lassopeptides - No core peptides found.
