thiopeptides: add help tooltips

--- a/antismash/modules/thiopeptides/templates/details.html
+++ b/antismash/modules/thiopeptides/templates/details.html
@@ -1,5 +1,8 @@
 <div class="details">
-  <h3>Detailed annotation</h3>
+    <div class="heading">
+      <span>Thiopeptide predictions</span>
+      {{help_tooltip(tooltip, "thio-body")}}
+    </div>
   {% if not cluster.motifs %}
     <div class="details-text">
       No core peptides found.
