html: clean up pfam2go detail

--- a/antismash/outputs/html/templates/cds_detail.html
+++ b/antismash/outputs/html/templates/cds_detail.html
@@ -36,8 +36,9 @@
   <br>
   <span class="bold"> Gene Ontology terms for PFAM domains:</span><br>
   {% for note in go_notes %}
-   {{note}}<br><br>
+   {{note}}<br>
   {% endfor %}
+  <br>
  {% endif %}
 </div>
 <div class="focus-urls">
