--- a/antismash/outputs/html/templates/regions.html
+++ b/antismash/outputs/html/templates/regions.html
@@ -4,10 +4,10 @@
 {% set results = results_by_record_id[record.id] %}
 {% for region in record.regions %}
 <div class="page" id='{{region.anchor_id}}'>
-  <h3> {{record.seq_record.name}} - Region {{region.get_region_number()}} - {{region.get_product_string() | capitalize }}</h3>
  <div class="region-grid">
   <div class = "content">
     <div class ="description-container">
+      <div class="heading"> {{record.seq_record.name}} - Region {{region.get_region_number()}} - {{region.get_product_string() | capitalize }} {{help_tooltip(svg_tooltip, "region_svg")}}</div>
       <div class="region-download">
         <a href = {{ '%s.region%03d.gbk' % (record.id, region.get_region_number()) }}>Download region GenBank file</a>
       </div>
