--- a/antismash/detection/nrps_pks_domains/templates/details.html
+++ b/antismash/detection/nrps_pks_domains/templates/details.html
@@ -2,7 +2,7 @@
   {% if has_domain_details %}
     <div class="heading">
       <span>Detailed domain annotation</span>
-      {{help_tooltip("Shows <a href='{0}glossary/#nrps' target='_blank'>NRPS</a>- and <a href='{0}glossary/#pks' target='_blank'>PKS</a>-related domains for each feature that contains them. Click on each domain for more information about the domain's location, consensus monomer prediction, and other details.".format(docs_url), "nrps-domain")}}
+      {{help_tooltip("Shows <a href='{0}glossary/#nrps' target='_blank'>NRPS</a>- and <a href='{0}glossary/#pks' target='_blank'>PKS</a>-related domains for each feature that contains them. Click on each domain for more information about the domain's location, consensus monomer prediction, and other details.<br>A glossary is available <a href='{0}modules/nrps_pks_domains/' target='_blank'>here</a>.".format(docs_url), "nrps-domain")}}
     </div>
     <div class="nrps-pks-domain-buttons">
       {{switch("Selected features only", "domains-selected-only")}}
