all: rename structures to match output

--- a/antismash/modules/nrps_pks/templates/monomers.html
+++ b/antismash/modules/nrps_pks/templates/monomers.html
@@ -19,7 +19,7 @@
       {% for domain in record.get_cds_by_name(gene_id).nrps_pks.domains %}
         {% if domain.feature_name in results.consensus %}
           <dd><strong>{{domain.name}} ({{domain.start}}..{{domain.end}})</strong>: {{results.consensus[domain.feature_name]}}
-          {{collapser_start(gene_id, level="supercluster")}}
+          {{collapser_start(gene_id, level="candidate")}}
           {% for prediction in results.domain_predictions.get(domain.feature_name, {}).values() %}
               {{prediction.method}}:  {{prediction.get_classification() | join(", ") or "(unknown)"}}
               {{collapser_start(gene_id + "-" + prediction.method, level="none")}}
