--- a/antismash/outputs/html/css/style.less
+++ b/antismash/outputs/html/css/style.less
@@ -840,7 +840,7 @@ table.region-table {
     padding-left: 1em;
 }
 
-.supercluster-hybrid {
+.candidate-hybrid {
     & rect {
         fill: #282268;
     }
@@ -849,7 +849,7 @@ table.region-table {
     }
 }
 
-.supercluster-interleaved {
+.candidate-interleaved {
     & rect {
         fill: #4b4596;
     }
@@ -858,7 +858,7 @@ table.region-table {
     }
 }
 
-.supercluster-neighbouring {
+.candidate-neighbouring {
     & rect {
         fill: #8680cc;
     }
@@ -867,7 +867,7 @@ table.region-table {
     }
 }
 
-.supercluster-single {
+.candidate-single {
     & rect {
         fill: #c6c1f5;
     }
