hmm_detection: change fragment cluster types to '-like' instead

--- a/antismash/outputs/html/css/secmet.less
+++ b/antismash/outputs/html/css/secmet.less
@@ -63,7 +63,7 @@
     .pks;
 }
 
-.pksfragment {
+.pks-like {
     .pks;
 }
 
@@ -87,7 +87,7 @@
     .secmet(white, seagreen);
 }
 
-.nrpsfragment {
+.nrps-like {
     .nrps;
 }
 
