html: change TTA legend label to match style of other legends

--- a/antismash/outputs/html/templates/regions.html
+++ b/antismash/outputs/html/templates/regions.html
@@ -36,7 +36,7 @@
         {{le.legend('legend-type-resistance', 'resistance genes')}}
         {{le.legend('legend-type-other', 'other genes')}}
         {% if (options.tta_enabled or not options.minimal) and record.get_gc_content() >= options.tta_threshold %}
-            {{le.legend('legend-tta-codon', 'TTA codon')}}
+            {{le.legend('legend-tta-codon', 'TTA codons')}}
         {% endif %}
         {% if options.cassis %}
             {{le.legend('legend-border-cassis', 'cluster extent as predicted by CASSIS')}}
