hmm_detection: capitalise rule names appropriately

--- a/antismash/outputs/html/css/secmet.less
+++ b/antismash/outputs/html/css/secmet.less
@@ -23,7 +23,7 @@
     .secmet(midnightblue, lightsteelblue, midnightblue);
 }
 
-.pks {
+.PKS {
     .secmet(purple, sandybrown, purple);
 }
 
@@ -39,32 +39,32 @@
     .secmet(white, royalblue);
 }
 
-.t1pks {
-    .pks;
+.T1PKS {
+    .PKS;
 }
 
-.transatpks {
-    .pks;
+.transAT-PKS {
+    .PKS;
 }
 
-.t2pks {
-    .pks;
+.T2PKS {
+    .PKS;
 }
 
-.t3pks {
-    .pks;
+.T3PKS {
+    .PKS;
 }
 
-.hgleks {
-    .pks;
+.hglE-KS {
+    .PKS;
 }
 
-.ppysks {
-    .pks;
+.PpyS-KS {
+    .PKS;
 }
 
-.pks-like {
-    .pks;
+.PKS-like {
+    .PKS;
 }
 
 .arylpolyene {
@@ -79,16 +79,16 @@
     .hydrocarbon;
 }
 
-.pufa {
+.PUFA {
     .hydrocarbon;
 }
 
-.nrps {
+.NRPS {
     .secmet(white, seagreen);
 }
 
-.nrps-like {
-    .nrps;
+.NRPS-like {
+    .NRPS;
 }
 
 .terpene {
@@ -131,7 +131,7 @@
     .ripp;
 }
 
-.lap {
+.LAP {
     .ripp;
 }
 
@@ -227,7 +227,7 @@
     .ripp;
 }
 
-.pbde {
+.PBDE {
     .hydrocarbon;
 }
 
