html/secmet.less: Rename .ripp to .RiPP now that we do mixed case rules
Signed-off-by: Kai Blin <kblin@biosustain.dtu.dk>

--- a/antismash/outputs/html/css/secmet.less
+++ b/antismash/outputs/html/css/secmet.less
@@ -35,7 +35,7 @@
     .secmet(white, purple);
 }
 
-.ripp {
+.RiPP {
     .secmet(white, royalblue);
 }
 
@@ -104,15 +104,15 @@
 }
 
 .bacteriocin {
-    .ripp;
+    .RiPP;
 }
 
 .RaS-RiPP {
-    .ripp;
+    .RiPP;
 }
 
 .fungal-RiPP {
-    .ripp;
+    .RiPP;
 }
 
 .thiopeptide {
@@ -120,43 +120,43 @@
 }
 
 .linaridin {
-    .ripp;
+    .RiPP;
 }
 
 .cyanobactin {
-    .ripp;
+    .RiPP;
 }
 
 .glycocin {
-    .ripp;
+    .RiPP;
 }
 
 .LAP {
-    .ripp;
+    .RiPP;
 }
 
 .lassopeptide {
-    .ripp;
+    .RiPP;
 }
 
 .sactipeptide {
-    .ripp;
+    .RiPP;
 }
 
 .bottromycin {
-    .ripp;
+    .RiPP;
 }
 
 .head_to_tail {
-    .ripp;
+    .RiPP;
 }
 
 .microviridin {
-    .ripp;
+    .RiPP;
 }
 
 .proteusin {
-    .ripp;
+    .RiPP;
 }
 
 .blactam {
@@ -224,7 +224,7 @@
 }
 
 .fused {
-    .ripp;
+    .RiPP;
 }
 
 .PBDE {
