html: properly layout combinations of subregions and superclusters

--- a/antismash/outputs/html/css/style.less
+++ b/antismash/outputs/html/css/style.less
@@ -541,21 +541,21 @@ table {
     font-size: 80%;
 }
 
-.svgene-border-cassis {
+.cluster-core {
+    stroke: black;
+    stroke-width: 1px;
+    fill: @tool-rule-based-clusters;
+}
+
+.svgene-border-cassis .cluster-core {
     stroke: black;
     stroke-width: 1px;
     fill: @tool-cassis;
 }
 
-.svgene-border-clusterfinder {
+.svgene-border-clusterfinder .cluster-core {
     stroke-width: 0px;
     fill: @tool-clusterfinder;
-}
-
-.cluster-core {
-    stroke: black;
-    stroke-width: 1px;
-    fill: @tool-rule-based-clusters;
 }
 
 .svgene-orf, .svgene-minimap-orf{
