html: prevent help icons appearing on top of dropdown menus

--- a/antismash/outputs/html/css/style.less
+++ b/antismash/outputs/html/css/style.less
@@ -865,6 +865,7 @@ ul.dropdown-options {
 
 .dropdown-menu {
     text-align: right;
+    z-index: 1;
     &:active ul {
         display: block;
     }
