html: don't show subregion legends as buttons

--- a/antismash/outputs/html/css/style.less
+++ b/antismash/outputs/html/css/style.less
@@ -614,6 +614,21 @@ table {
     cursor: default;
 }
 
+.legend-selector-static {
+    display: flex;
+    align-items: center;
+    border: 1px solid lightgrey;
+    border-radius: 0.5em;
+    margin-left: 1em;
+    padding: 0.5em;
+    padding-top: 0.3em;
+    cursor: default;
+    font-size: 80%;
+    & * {
+        cursor: default;
+    }
+}
+
 .legend-type-other {
     background-color: @gene-type-other;
 }
