--- a/antismash/outputs/html/templates/legend_entry_macro.html
+++ b/antismash/outputs/html/templates/legend_entry_macro.html
@@ -4,3 +4,10 @@
       <div class="legend-label">{{description}}</div>
     </div>
 {%- endmacro %}
+
+{% macro static_legend(css_class, description) -%}
+    <div class="legend-selector-static">
+      <div class="legend-field {{css_class}}"></div>
+      <div class="legend-label">{{description}}</div>
+    </div>
+{%- endmacro %}
