--- a/antismash/outputs/html/templates/regions.html
+++ b/antismash/outputs/html/templates/regions.html
@@ -39,10 +39,10 @@
             {{le.legend('legend-tta-codon', 'TTA codons')}}
         {% endif %}
         {% if options.cassis %}
-            {{le.legend('legend-border-cassis', 'cluster extent as predicted by CASSIS')}}
+            {{le.static_legend('legend-border-cassis', 'cluster extent as predicted by CASSIS')}}
         {% endif %}
         {% if options.cf_create_clusters or options.cf_borders_only %}
-            {{le.legend('legend-border-clusterfinder', 'cluster extent as predicted by ClusterFinder')}}
+            {{le.static_legend('legend-border-clusterfinder', 'cluster extent as predicted by ClusterFinder')}}
         {% endif %}
       </div>
     </div>
