html: include record info in interface JSON

--- a/antismash/outputs/html/templates/overview.html
+++ b/antismash/outputs/html/templates/overview.html
@@ -136,7 +136,7 @@
   <script src="regions.js"></script>
   <script>
     $(document).ready(function() {
-        viewer["start"](all_regions, details_data);
+        viewer["start"](all_regions, details_data, recordData);
     })
   </script>
 
