hmm_detection: Add detection rule for N-acetylglutaminylglutamine amides
Signed-off-by: Kai Blin <kblin@biosustain.dtu.dk>

--- a/antismash/outputs/html/css/secmet.less
+++ b/antismash/outputs/html/css/secmet.less
@@ -39,6 +39,10 @@
     .secmet(white, royalblue);
 }
 
+.osmolyte {
+    .secmet(firebrick, yellowgreen, firebrick);
+}
+
 .T1PKS {
     .PKS;
 }
@@ -180,7 +184,11 @@
 }
 
 .ectoine {
-    .secmet(firebrick, yellowgreen, firebrick);
+    .osmolyte;
+}
+
+.NAGGN {
+    .osmolyte;
 }
 
 .butyrolactone {
