--- a/antismash/outputs/html/templates/overview.html
+++ b/antismash/outputs/html/templates/overview.html
@@ -1,3 +1,4 @@
+{% import 'region_table_macros.html' as region_table %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -45,82 +46,46 @@
   <!-- overview page -->
   {% if records %}
   <div class="page" id="overview">
-    {% if options.triggered_limit %}
-      <h3>Identified secondary metabolite regions (truncated to the first {{options.limit}} record(s)) <span id="truncated"></span></h3>
-    {% else %}
-      <h3>Identified secondary metabolite regions<span id="truncated"></span></h3>
+   {% if options.triggered_limit %}
+     <h3>Identified secondary metabolite regions (truncated to the first {{options.limit}} record(s)) <span id="truncated"></span></h3>
+   {% else %}
+     <h3>Identified secondary metabolite regions<span id="truncated"></span></h3>
+   {% endif %}
+   <div class="overview-layout">
+    <div id="record-tables">
+     <div id="single-record-tables">
+     {% for record in records -%}
+      <div class="record-overview-header">
+       {{record.get_from_record()}}
+      </div>
+      <div class="record-overview-details">
+        <svg id="record-minimap-{{record.record_index}}" class="record-overview-svg" height="1" width="1"></svg>
+        {{ region_table.single_record_table(record, multi_record, options) }}
+      </div>
+     {%- endfor %}
+     </div>
+     {% if multi_record %}
+     <div id="compact-record-table" style="display: none;">
+      <div class="record-table">
+       {{ region_table.compact_records_table(records, options) }}
+      </div>
+     </div>
+     {% endif %}
+     {% if records_without_regions %}
+     <dl id="regionless-records">
+      <dt class="record-overview-header">No secondary metabolite regions were found in these records:</dt>
+       {% for record in records_without_regions %}
+         <dd>{{record.get_from_record()}}</dd>
+       {% endfor %}
+     </dl>
+     {% endif %}
+    </div>
+    {% if multi_record %}
+    <div class="overview-switches">
+     {{switch("Compact view", "overview-switch-compact")}}
+    </div>
     {% endif %}
-    <table id="region-overview">
-      <thead>
-        <tr>
-          <th>Region</th>
-          <th>Type</th>
-          <th>From</th>
-          <th>To</th>
-          <th colspan="2">Most similar known cluster</th>
-          <th>Similarity</th>
-          <th>MIBiG BGC-ID</th>
-        </tr>
-      </thead>
-
-      <tbody>
-        {% for record in records -%}
-          <tr class='separator-row'>
-            <td class='separator-text' colspan="6">{{record.get_from_record()}}</td>
-          </tr>
-          <tr><td colspan="8"><svg id="record-minimap-{{record.record_index}}" class="record-overview-svg" height="1" width="1"></svg></td></tr>
-          {% for region in record.regions -%}
-            <tr class = '{{loop.cycle('odd', 'even')}}'>
-              {% set hybrid_text = "" %}
-              {% if region.products | length > 1 %}
-                  {% set hybrid_text = "hybrid " %}
-              {% endif %}
-              <td class="regbutton {{region.get_product_string()}} {{hybrid_text}}{{region.anchor_id}}">
-                <a href="#{{region.anchor_id}}">Region {% if multi_record %}{{record.record_index}}.{% endif %}{{region.get_region_number()}}</a>
-              </td>
-              <td>
-                {% set join = joiner(",") %}
-                {% for subtype in region.products -%}
-                  {{join()}}<a href="{{options.urls.docs_baseurl}}glossary/#{{subtype.lower()}}" target="_blank">{{subtype}}</a>
-                {%- endfor %}
-              </td>
-              <td class="digits">{{"{:,d}".format(region.location.start + 1)}}</td>
-              <td class="digits">{{"{:,d}".format(region.location.end)}}</td>
-              <td>{{region.best_knowncluster_name}}</td>
-              <td>{{region.best_knowncluster_type}}</td>
-              {% set similarity = region.best_knowncluster_similarity %}
-              {% if similarity > 75 %}
-                {% set colour = "rgba(0, 100, 0, 0.3)" %}
-              {% elif similarity > 50 %}
-                {% set colour = "rgba(210, 105, 30, 0.3)" %}
-              {% else %}
-                {% set colour = "rgba(205, 92, 92, 0.3)" %}
-              {% endif %}
-              {% if similarity > 0 %}
-              <td class="digits similarity-text" style="background-image: linear-gradient(to left, {{colour}}, {{colour}} {{similarity}}%, #ffffff00 {{similarity}}%)">{{similarity}}%</td>
-              {% else %}
-              <td></td>
-              {% endif %}
-              {% if region.bgc_id != "" -%}
-                <td><a href="https://mibig.secondarymetabolites.org/go/{{region.bgc_id}}/{{region.bgc_cluster_number}}" target="_blank">{{region.bgc_id}}</a></td>
-              {%- else -%}
-                <td></td>
-              {%- endif %}
-            </tr>
-            {%- endfor %}
-        {%- endfor %}
-        {% if records_without_regions %}
-            <tr class = 'separator-row'>
-              <td class='separator-text' colspan="6">No secondary metabolite regions were found in these records:</td>
-            </tr>
-          {% for record in records_without_regions %}
-            <tr>
-              <td></td><td colspan="6">{{record.id}}{% if record.annotations.get("source") %} ({{record.annotations["source"]}}){% endif %}</td>
-            </tr>
-          {% endfor %}
-        {% endif %}
-      </tbody>
-    </table>
+   </div>
   </div>
   {% else %}
   <div class="page" id="overview">
