html: make region table rows clickable

--- a/antismash/outputs/html/css/style.less
+++ b/antismash/outputs/html/css/style.less
@@ -486,6 +486,10 @@ table.region-table {
     .digits {
         text-align: right;
     }
+
+    .linked-row {
+        cursor: pointer;
+    }
 }
 
 .record-overview-header {
