--- a/antismash/modules/nrps_pks/templates/monomers.html
+++ b/antismash/modules/nrps_pks/templates/monomers.html
@@ -10,9 +10,9 @@
       <dt></dt>
       {% if gene_id in region.url_strict %}
         <dd> Search NORINE for peptide:
-          <a href="{{region.url_strict[gene_id]}}" target="_new">strict</a>
+          <a class="external-link" href="{{region.url_strict[gene_id]}}" target="_new">strict</a>
             or
-          <a href="{{region.url_relaxed[gene_id]}}" target="_new">relaxed</a>
+          <a class="external-link" href="{{region.url_relaxed[gene_id]}}" target="_new">relaxed</a>
         </dd>
         <br>
       {% endif %}
