--- a/antismash/modules/nrps_pks/templates/products.html
+++ b/antismash/modules/nrps_pks/templates/products.html
@@ -22,9 +22,9 @@
                 <dt><b>Polymer prediction:</b></dt><dd>{{supercluster.polymer}}</dd>
               </dl>
               <br>Direct lookup in NORINE database:
-              <a href="{{supercluster.get_norine_url()}}" target="_new">strict</a>
+              <a class="external-link" href="{{supercluster.get_norine_url()}}" target="_new">strict</a>
                 or
-              <a href="{{supercluster.get_norine_url(be_strict = False)}}" target="_new">relaxed</a><br>
+              <a class="external-link" href="{{supercluster.get_norine_url(be_strict = False)}}" target="_new">relaxed</a><br>
             </div>
             {% endif %}
             {{collapser_end()}}
@@ -44,7 +44,7 @@
     {% endfor %}
     <div class="prediction-text">
       <br>
-      <a href="http://bioinfo.lifl.fr/norine/form2.jsp" target="_new">Link to NORINE database query form</a>
+      <a class="external-link" href="http://bioinfo.lifl.fr/norine/form2.jsp" target="_new">Link to NORINE database query form</a>
     </div>
   {% endif %}
 </div>
