--- a/antismash/outputs/html/templates/region_table_macros.html
+++ b/antismash/outputs/html/templates/region_table_macros.html
@@ -23,7 +23,7 @@
      <td>
        {% set join = joiner(",") %}
        {% for subtype in region.products -%}
-         {{join()}}<a href="{{options.urls.docs_baseurl}}glossary/#{{subtype.lower()}}" target="_blank">{{subtype}}</a>
+         {{join()}}<a class="external-link" href="{{options.urls.docs_baseurl}}glossary/#{{subtype.lower()}}" target="_blank">{{subtype}}</a>
        {%- endfor %}
      </td>
      <td class="digits">{{"{:,d}".format(region.location.start + 1)}}</td>
@@ -37,7 +37,7 @@
       {% else %}
         {% set colour = "rgba(205, 92, 92, 0.3)" %}
       {% endif %}
-      <td><a href="https://mibig.secondarymetabolites.org/go/{{region.bgc_id}}/{{region.bgc_cluster_number}}" target="_blank">{{region.best_knowncluster_name}}</a></td>
+      <td><a class="external-link" href="https://mibig.secondarymetabolites.org/go/{{region.bgc_id}}/{{region.bgc_cluster_number}}" target="_blank">{{region.best_knowncluster_name}}</a></td>
       <td>{{region.best_knowncluster_type}}</td>
       <td class="digits similarity-text" style="background-image: linear-gradient(to left, {{colour}}, {{colour}} {{similarity}}%, #ffffff00 {{similarity}}%)">{{similarity}}%</td>
      {% else %}
