lassopeptides: change tail colour in HTML

--- a/antismash/modules/lassopeptides/templates/details.html
+++ b/antismash/modules/lassopeptides/templates/details.html
@@ -41,7 +41,7 @@
     <h4> Legend: </h4>
     <div>
       <span class="macrolactam">Red</span>: Putative macrolactam<br>
-      <span class="cut">Grey</span>: Putative cleaved off residues<br>
+      <span class="cut">Purple</span>: Putative cleaved off residues<br>
     </div>
   </div>
   {% endif %}
