hmm_detection: remove cf_ prefix from old clusterfinder rule-based types

--- a/antismash/outputs/html/css/secmet.less
+++ b/antismash/outputs/html/css/secmet.less
@@ -263,10 +263,10 @@
     .secmet(black, #f2f2f2, black);
 }
 
-.cf_saccharide {
+.saccharide {
     .unknown;
 }
 
-.cf_fatty_acid {
+.fatty_acid {
     .unknown;
 }
